--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "firebase": "^11.1.0",
+    "js-cookie": "^3.0.5",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
