--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
     "tailwind-scrollbar-hide": "^2.0.0"
