--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
